# menubar-ai-usage-mac

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  update-homebrew.yml
Casks/: menubar-claude.rb
Formula/: menubar-claude.rb
menubar-claude/menubar-claude/: menubar_claudeApp.swift
menubar-claude/menubar-claude.xcodeproj/: project.pbxproj
menubar-claude/menubar-claude.xcodeproj/project.xcworkspace/xcuserdata/jannis.xcuserdatad/: UserInterfaceState.xcuserstate
menubar-claude/menubar-claude.xcodeproj/project.xcworkspace/xcuserdata/workstation.xcuserdatad/: UserInterfaceState.xcuserstate
menubar-claude/menubar-claude.xcodeproj/xcuserdata/jannis.xcuserdatad/xcschemes/: xcschememanagement.plist
menubar-claude/menubar-claude/Models/: ClaudeUsageModels.swift  SupportedBrowser.swift
menubar-claude/menubar-claude/Resources/: claude.py
menubar-claude/menubar-claude/ViewModels/: ClaudeUsageViewModel.swift
menubar-claude/menubar-claude/Views/: ClaudeUsageView.swift
scripts/: bump-version.sh
