[project]
name = "menubar-ai-usage-mac"
version = "0.1.3"
description = "Monitor Claude API usage in mac menubar via browser cookies"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["waybar", "claude", "chatgpt", "openai", "usage", "monitor"]
authors = [
    { name = "cipher-shad0w" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "browser-cookie3>=0.20.1",
    "curl-cffi>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/cipher-shad0w/menubar-ai-usage-mac"
Repository = "https://github.com/cipher-shad0w/menubar-ai-usage-mac"
Issues = "https://github.com/cipher-shad0w/menubar-ai-usage-mac/issues"

[project.scripts]
claude-usage = "claude:main"
codex-usage = "codex:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude.py", "common.py"]

[dependency-groups]
dev = []
